--- a/templates/forgotPass.tmpl
+++ b/templates/forgotPass.tmpl
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Email verified</title>
+    <title>Forgot Password</title>
   </head>
   <body>
     <div class="flex flex-col items-center justify-center h-screen space-y-4">
@@ -26,9 +26,9 @@
           </svg>
         </div>
       </div>
-      <div class="text-2xl font-bold">Vérification réussie</div>
+      <div class="text-2xl font-bold">Reinitialisation du mot de pase réussie</div>
       <div class="text-gray-500 dark:text-gray-400 mt-2">
-        Votre email a été vérifié avec succès.
+        Votre mot de passe a été reinitialiser avec succès.
       </div>
     </div>
   </body>
