--- a/templates/forgotPass.tmpl
+++ b/templates/forgotPass.tmpl
@@ -28,7 +28,7 @@
       </div>
       <div class="text-2xl font-bold">Reinitialisation du mot de pase réussie</div>
       <div class="text-gray-500 dark:text-gray-400 mt-2">
-        Votre mot de passe a été reinitialiser avec succès.
+        Votre mot de passe a été reinitialiser avec succès, Alors veuillez saisir votre nouveau mot de passe 
       </div>
     </div>
   </body>
