--- a/templates/forgotPass.tmpl
+++ b/templates/forgotPass.tmpl
@@ -26,9 +26,12 @@
           </svg>
         </div>
       </div>
-      <div class="text-2xl font-bold">Reinitialisation du mot de pase réussie</div>
+      <div class="text-2xl font-bold">
+        Reinitialisation du mot de pase réussie
+      </div>
       <div class="text-gray-500 dark:text-gray-400 mt-2">
-        Votre mot de passe a été reinitialiser avec succès, Alors veuillez saisir votre nouveau mot de passe 
+        Votre mot de passe a été reinitialiser avec succès, Alors veuillez
+        saisir votre nouveau mot de passe
       </div>
     </div>
   </body>
